--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         toolchain: stable
         target: wasm32-unknown-unknown
+    - name: Make build script executable
+      run: chmod +x ./build.sh
     - name: Build
       run: ./build.sh
     - name: Deploy to Droplet
