--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,18 +8,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: wasm32-unknown-unknown
-    - name: Install wasm-bindgen-cli
-      run: cargo install wasm-bindgen-cli
-    - name: Make build script executable
-      run: chmod +x ./build.sh
+    - uses: actions/checkout@v4
+    - name: Setup toolchain for wasm
+      run: |
+        rustup update stable
+        rustup default stable
+        rustup set profile minimal
+        rustup target add wasm32-unknown-unknown
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2
+    - name: Download and install Trunk binary
+      run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
     - name: Build
-      run: ./build.sh
+      run: ./trunk build --release
     - name: Deploy to Droplet
       uses: appleboy/scp-action@master
       with:
