--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y clang llvm libudev-dev libssl-dev pkg-config
+
     - name: Setup toolchain for wasm
       run: |
         rustup update stable
         rustup default stable
         rustup set profile minimal
         rustup target add wasm32-unknown-unknown
+
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2
+
     - name: Download and install Trunk binary
       run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+
     - name: Build
       run: ./trunk build --release
+
     - name: Deploy to Droplet
       uses: appleboy/scp-action@master
       with:
