--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
         rustup update stable
         rustup default stable
         rustup set profile minimal
-        rustup target add wasm32-unknown-unknown
+        rust target add wasm32-wasi
+        # rustup target add wasm32-unknown-unknown
 
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2
