--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ rust-version = "1.76"
 
 [package.metadata.docs.rs]
 all-features = true
-targets = ["x86_64-unknown-linux-gnu", "wasm32-wasi"]
-# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
+targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
 egui = "0.28"
@@ -21,7 +20,7 @@ eframe = { version = "0.28", default-features = false, features = [
 ] }
 log = "0.4"
 
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
 lazy_static = "1.4.0"
 
 # You only need serde if you want app persistence:
