--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Debug File Structure
+      run: |
+        ls -la
+        ls -la frontend
+
     - name: Install system dependencies
       run: |
         sudo apt-get update
@@ -29,14 +34,11 @@ jobs:
     - name: Download and install Trunk binary
       run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
 
-    - name: Build Frontend
+    - name: Build Frontend and Backend
       run: |
         cd frontend
-        ../trunk build --release
-
-    - name: Build Backend
-      run: |
-        cd backend
+        ../build.sh
+        cd ../backend
         cargo build --release
 
     - name: Deploy Frontend to Droplet
@@ -45,7 +47,7 @@ jobs:
         host: ${{ secrets.DROPLET_IP }}
         username: ${{ secrets.DROPLET_USER }}
         key: ${{ secrets.DROPLET_SSH_KEY }}
-        source: "frontend/dist/*"
+        source: "dist/*"
         target: "/var/www/your_app/frontend"
         strip_components: 2
 
