--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Download and install Trunk binary
       run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
 
+    - name: Make build.sh executable
+      run: chmod +x build.sh
+
     - name: Build Frontend and Backend
       run: |
         cd frontend
