--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
       uses: Swatinem/rust-cache@v2
 
     - name: Download and install Trunk binary
-      run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+      run: |
+        wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+        sudo mv trunk /usr/local/bin/
+        trunk --version
 
     - name: Make build.sh executable
       run: chmod +x build.sh
@@ -64,6 +67,16 @@ jobs:
         source: "backend/target/release/backend"
         target: "/var/www/your_app/backend"
         strip_components: 3
+
+    - name: Set Permissions
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.DROPLET_IP }}
+        username: ${{ secrets.DROPLET_USER }}
+        key: ${{ secrets.DROPLET_SSH_KEY }}
+        script: |
+          sudo chown -R www-data:www-data /var/www/your_app
+          sudo chmod -R 755 /var/www/your_app
 
     - name: Restart Backend Service
       uses: appleboy/ssh-action@master
