--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
         ls -la
         echo "Frontend Directory:"
         ls -la frontend
+        echo "Current working directory:"
+        pwd
 
     - name: Install system dependencies
       run: |
@@ -44,9 +46,9 @@ jobs:
 
     - name: Build Frontend and Backend
       run: |
+        echo "Current directory before build:"
+        pwd
         ./build.sh
-        cd backend
-        cargo build --release
 
     - name: Deploy Frontend to Droplet
       uses: appleboy/scp-action@master
