--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -20,6 +20,7 @@ shared = { path = "../shared" }
 env_logger = "0.10"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.4"
 
