--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -19,6 +19,8 @@ getrandom = { version = "0.2", features = ["js"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
+tokio = { version = "1.0", features = ["full"] }
+
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
