--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,3 +9,5 @@ rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
 shared = { path = "../shared" }
 dotenv = "0.15"
 env_logger = "0.10"
+lazy_static = "1.4"
+serde = { version = "1.0", features = ["derive"] }
