--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,9 +56,9 @@ jobs:
         host: ${{ secrets.DROPLET_IP }}
         username: ${{ secrets.DROPLET_USER }}
         key: ${{ secrets.DROPLET_SSH_KEY }}
-        source: "dist/*"
+        source: "frontend/dist/*"
         target: "/var/www/your_app/frontend"
-        strip_components: 1
+        strip_components: 2
 
     - name: Deploy Backend to Droplet
       uses: appleboy/scp-action@master
