--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,13 @@ jobs:
         target: "/var/www/your_app/frontend"
         strip_components: 2
 
+    - name: Debug Backend Files
+      run: |
+        echo "Contents of backend/target/release:"
+        ls -la backend/target/release
+        echo "Size of backend binary:"
+        du -h backend/target/release/backend
+
     - name: Deploy Backend to Droplet
       uses: appleboy/scp-action@master
       with:
@@ -67,9 +74,21 @@ jobs:
         username: ${{ secrets.DROPLET_USER }}
         key: ${{ secrets.DROPLET_SSH_KEY }}
         source: "backend/target/release/backend"
-        target: "/var/www/your_app/backend"
+        target: "/var/www/your_app/backend/"
         strip_components: 3
 
+    - name: Verify Deployment
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.DROPLET_IP }}
+        username: ${{ secrets.DROPLET_USER }}
+        key: ${{ secrets.DROPLET_SSH_KEY }}
+        script: |
+          echo "Contents of /var/www/your_app/frontend:"
+          ls -la /var/www/your_app/frontend
+          echo "Contents of /var/www/your_app/backend:"
+          ls -la /var/www/your_app/backend
+  
     - name: Set Permissions
       uses: appleboy/ssh-action@master
       with:
