--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
         ls -la
         echo "Frontend Directory:"
         ls -la frontend
+        echo "Backend Directory:"
+        ls -la backend
         echo "Current working directory:"
         pwd
 
