--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,7 @@ dotenv = "0.15"
 env_logger = "0.10"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
+
+[[bin]]
+name = "backend"
+path = "src/main.rs"
