--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,10 +68,9 @@ jobs:
         host: ${{ secrets.DROPLET_IP }}
         username: ${{ secrets.DROPLET_USER }}
         key: ${{ secrets.DROPLET_SSH_KEY }}
-        source: "backend/target/release/*" # Error here
+        source: "target/release/*"
         target: "/var/www/your_app/backend/"
         strip_components: 2
-        debug: true
 
     - name: Check Server Directory Structure
       uses: appleboy/ssh-action@master
