--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -13,6 +13,7 @@ eframe = { version = "0.28", default-features = false, features = [
 ] }
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 reqwest = { version = "0.11", features = ["json"] }
 shared = { path = "../shared" }
 getrandom = { version = "0.2", features = ["js"] }
