--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,6 +13,8 @@ env_logger = "0.10"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+argon2 = "0.5"
+chrono = { version = "0.4", features = ["serde"] }
 
 [[bin]]
 name = "backend"
