--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 argon2 = "0.5"
 chrono = { version = "0.4", features = ["serde"] }
+egui = "0.28"
 
 [[bin]]
 name = "backend"
