--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,11 +11,18 @@ shared = { path = "../shared" }
 dotenv = "0.15"
 env_logger = "0.10"
 lazy_static = "1.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 argon2 = "0.5"
 chrono = { version = "0.4", features = ["serde"] }
 egui = "0.28"
+eframe = { version = "0.28", default-features = false, features = [
+    "accesskit",
+    "default_fonts",
+    "glow",
+    "persistence",
+] }
+log = "0.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [[bin]]
 name = "backend"
