--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -21,6 +21,7 @@ getrandom = { version = "0.2", features = ["js"] }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
 tokio = { version = "1.0", features = ["full"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
