--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -14,3 +14,4 @@ eframe = { version = "0.28", default-features = false, features = [
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+enum-iterator = "2.1.0"
