--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -15,3 +15,8 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 enum-iterator = "2.1.0"
+uuid = { version = "1.10.0", features = [
+    "v4",
+    "fast-rng",
+    "macro-diagnostics",
+] }
